# aboawt

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
include/Android/: BatteryManager.h  Classpaths.h
include/Application/: CmdLine.h  Core.h  Definitions.h  PkgMgr.h  Utils.h
include/Swap/: SwapManager.h
java/: .gitignore
src/: CmdLine.cpp  TestMain.cpp  main.cpp
src/Android/: BatteryManager.cpp  Classpaths.cpp
src/Application/: Core.cpp  Definitions.cpp  PkgMgr.cpp  Utils.cpp
src/Swap/: SwapManager.cpp
